--- a/index.html
+++ b/index.html
@@ -23,58 +23,50 @@
     </style>
   </head>
   <body>
-    <h1>Privacy Policy - Image Optimizer by Moodlift Software</h1>
-    <p>
-      Moodlift Software ("us", "we", or "our") operates the Image Optimizer
-      Shopify app (the "Service"). This page informs you of our policies
-      regarding the collection, use, and disclosure of personal information when
-      you use our Service.
-    </p>
-    <h2>Information Collection and Use</h2>
-    <p>
-      While using our Service, we may ask you to provide us with certain
-      personally identifiable information that can be used to contact or
-      identify you. Personally identifiable information may include, but is not
-      limited to, your email address, name, and other information ("Personal
-      Information"). We collect this information for the purpose of providing
-      the Service, identifying and communicating with you, responding to your
-      requests/inquiries, and improving our services.
-    </p>
-    <h2>Log Data</h2>
-    <p>
-      We may also collect information that your browser sends whenever you visit
-      our Service ("Log Data"). This Log Data may include information such as
-      your computer's Internet Protocol ("IP") address, browser type, browser
-      version, the pages of our Service that you visit, the time and date of
-      your visit, the time spent on those pages, and other statistics.
-    </p>
-    <h2>Communications</h2>
-    <p>
-      We may use your Personal Information to contact you with newsletters,
-      marketing or promotional materials, and other information that may be of
-      interest to you. You may opt-out of receiving any, or all, of these
-      communications by following the unsubscribe link or instructions provided
-      in any email we send.
-    </p>
-    <h2>Changes to This Privacy Policy</h2>
-    <p>
-      This Privacy Policy is effective as of the date indicated at the bottom of
-      this page and will remain in effect except with respect to any changes in
-      its provisions in the future, which will be in effect immediately after
-      being posted on this page.
-    </p>
-    <p>
-      We reserve the right to update or change our Privacy Policy at any time,
-      and you should check this Privacy Policy periodically. Your continued use
-      of the Service after we post any modifications to the Privacy Policy on
-      this page will constitute your acknowledgment of the modifications and
-      your consent to abide and be bound by the modified Privacy Policy.
-    </p>
-    <h2>Contact Us</h2>
-    <p>
-      If you have any questions about this Privacy Policy, please contact us at
-      <a href="mailto:info@moodliftsoftware.com">info@moodliftsoftware.com</a>.
-    </p>
-    <p>Last Updated: May 6, 2023</p>
-  </body>
+	<h1>Image Load Speed Optimizer</h1>
+
+	<p>Image Load Speed Optimizer "the App” provides image optimization "the Service" to merchants who use Shopify to power their stores. This Privacy Policy describes how personal information is collected, used, and shared when you install or use the App in connection with your Shopify-supported store.</p>
+
+	<h2>Personal Information the App Collects</h2>
+
+	<p>When you install the App, we are automatically able to access certain types of information from your Shopify account:</p>
+	<ul>
+		<li>Store domain - we use this as unique identifier for your store</li>
+    <li>Store products - we use this to optimize your product images</li>
+	</ul>
+
+	<p>Additionally, we collect the following types of personal information from you and/or your customers once you have installed the App:</p>
+	<ul>
+		<li>Information about you and others who may access the App on behalf of your store, such as your name, address, email address, phone number, and billing information;</li>
+		<li>Information about individuals who visit your store, such as their IP address, web browser details, time zone, and information about the cookies installed on the particular device.</li>
+	</ul>
+
+	<p>We collect personal information directly from the relevant individual, through your Shopify account, or using the following technologies:</p>
+	<ul>
+		<li>“Cookies” are data files that are placed on your device or computer and often include an anonymous unique identifier. For more information about cookies, and how to disable cookies, visit <a href="http://www.allaboutcookies.org">http://www.allaboutcookies.org</a>.</li>
+		<li>“Log files” track actions occurring on the Site, and collect data including your IP address, browser type, Internet service provider, referring/exit pages, and date/time stamps.</li>
+		<li>“Web beacons,” “tags,” and “pixels” are electronic files used to record information about how you browse the Site.</li>
+	</ul>
+
+	<h2>How Do We Use Your Personal Information?</h2>
+
+	<p>We use the personal information we collect from you and your customers in order to provide the Service and to operate the App. Additionally, we use this personal information to: Communicate with you; Optimize or improve the App; and Provide you with information or advertising relating to our products or services.</p>
+
+  <h2>Sharing Your Personal Information</h2>
+
+  <p>We may share your Personal Information to comply with applicable laws and regulations, to respond to a subpoena, search warrant or other lawful request for information we receive, or to otherwise protect our rights.</p>
+
+  <p>Your Rights If you are a European resident, you have the right to access personal information we hold about you and to ask that your personal information be corrected, updated, or deleted. If you would like to exercise this right, please contact us through the contact information below.</p>
+
+  <p>Additionally, if you are a European resident we note that we are processing your information in order to fulfill contracts we might have with you (for example if you make an order through the Site), or otherwise to pursue our legitimate business interests listed above. Additionally, please note that your information will be transferred outside of Europe, including to Canada and the United States.</p>
+
+  <p>Data Retention When you place an order through the Site, we will maintain your Order Information for our records for 30 days unless and until you ask us to delete this information.</p>
+  
+  <p>Changes We may update this privacy policy from time to time in order to reflect, for example, changes to our practices or for other operational, legal or regulatory reasons.</p>
+
+  <p>Contact Us For more information about our privacy practices, if you have questions, or if you would like to make a complaint, please contact us by e-mail at <a href="mailto:info@moodliftsoftware.com">info@moodliftsoftware.com</a> or by mail using the details provided below:</p>
+
+  <p>Edvinas Kilbauskas <br/> Pavasario g. 39-14 <br/>Kėdainiai <br/>Kėdainių r. sav. <br/>LT-57465 <br/>Lithuania</p>
+
+</body>
 </html>
