--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
-    <title>Privacy Policy - "Image Optimizer" by Moodlift Software</title>
+    <title>Privacy Policy - "ImageBoost SEO" by Moodlift Software</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -24,9 +24,9 @@
     </style>
   </head>
   <body>
-	<h1>Image Load Speed Optimizer</h1>
+	<h1>ImageBoost SEO</h1>
 
-	<p>Image Load Speed Optimizer "the App” provides image optimization "the Service" to merchants who use Shopify to power their stores. This Privacy Policy describes how personal information is collected, used, and shared when you install or use the App in connection with your Shopify-supported store.</p>
+	<p>ImageBoost SEO "the App” provides image optimization "the Service" to merchants who use Shopify to power their stores. This Privacy Policy describes how personal information is collected, used, and shared when you install or use the App in connection with your Shopify-supported store.</p>
 
 	<h2>Personal Information the App Collects</h2>
 
